tests/script/negative/roles/illtyped.out
Type error at Line 1, Column 20:
   Expected: 'set<account>' inferred from a precondition 'roles' on Line 1, Column 20
   But got:  'set<text>' inferred from a set expression on Line 1, Column 20